# i-idiot

./: .gitignore  CMakeLists.txt  Makefile  count_char.c  count_char.h  echo_eof.c  echo_eof.h  fahr_celsius.c  fahr_celsius.h  hello.c
k_and_r/: fahr_celsius.h  maxlen_line.c  text_line.c  text_line.h
ooc/: Set.h  new.h
ooc/chp1/: Makefile  Object.h  Set.c  new.h
ooc/chp2/: Atom.c  Makefile  String.c  String.h  main.c  new.c  new.h  testString.c
ooc/chp3/: Makefile  infix.c  parse.c  parse.h  postfix.c  value.c  value.h
ooc/chp4/: Circle.c  Circle.h  Makefile  Point.c  Point.h  main.c  new.c  new.h
ooc/chp5/: Makefile  Name.c  Name.h  Name.r  Var.c  Var.h  binary.c  binary.h  mathlib.c  mathlib.h  parse.c  parse.h  value.c  value.h  value.r
ooc/chp6/: Circle.c  Circle.h  Circle.r  Makefile  Object.c  Object.h  Object.r  Point.c  Point.h  Point.r  any.c  circles.c  points.c
